# gorb-bridge

./: Cargo.toml  README.md  dfx.json  gorbagana_bridge_backend.did  package-lock.json  package.json
src/gorbagana-bridge-backend/: Cargo.toml
src/gorbagana-bridge-frontend/: package.json
src/gorbagana-bridge-frontend/src/: App.jsx
src/gorbagana_bridge_backend/: Cargo.toml  gorbagana_bridge_backend.did
src/gorbagana_bridge_backend/src/: indexer.rs  lib.rs
src/gorbagana_bridge_frontend/: package.json
src/gorbagana_bridge_frontend/src/: App.jsx
