[package]
name = "gorbagana_bridge_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
sha2 = "0.10.7"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
hex = "0.4.3"
serde_json = "1.0"
bs58 = "0.5.1"